[package]
name = "wotm"
version = "0.1.4-dev"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1"
tracing-subscriber = "0.2"
rand = "0.7"
enum-utils = "0.1"
lazy_static = "1.4"
roman = "0.1"
# bevy_easings = { version = "0.2", default-features = false }
bevy_easings = { git = "https://github.com/mockersf/bevy_extra", default-features = false }
# bevy_ninepatch = "0.3"
bevy_ninepatch = { git = "https://github.com/mockersf/bevy_extra" }
# bevy_log_diagnostic = "0.2"
bevy_log_diagnostic = { git = "https://github.com/mockersf/bevy_extra" }
bevy_diagnostic_counter = { git = "https://github.com/mockersf/bevy_extra" }

# bevy_rapier2d = "0.5"
bevy_rapier2d = { git = "https://github.com/vleue/bevy_rapier" }
# bevy_prototype_lyon = "0.1.3"
bevy_prototype_lyon = { git = "https://github.com/vleue/bevy_prototype_lyon" }

config = { path = "crates/config" }
asset_io = { path = "crates/asset_io", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_winit", "render", "png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_winit", "render", "png"] }
# bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2" }
bevy_webgl2 = { git = "https://github.com/vleue/bevy_webgl2" }

[features]
default = ["bundled", "bevy/bevy_wgpu" ]
bundled = ["asset_io"]


[workspace]
members = [
    "crates/*",
]


[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1


[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
